feat: migrate to virtual threads for async locating and make some improvements
- Added getOrCreateExecutor() for reduce code duplication

- Added onErrorOnServerThread, handle() and handleOnServerThread() for handle more errors

- Used completeExceptionally(t) instead of complete(null), to pass an actual throwable, not null